# rustbesimple_react

./: Cargo.toml  build.rs  readme.md
client/src/: App.css  App.js  Config.js
src/: main.rs
