[package]
name = "rustbesimple"
version = "0.1.0"
authors = ["Brian Duff <cairndubh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
rocket = "0.4.7"
rocket_contrib = "0.4.7"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
